--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=postgresql://ddr_create_user:WEcK3JpDagsYQNeEvbDjbxGwrhcoKLVW@dpg-crijjim8ii6s73f4ma50-a.oregon-postgres.render.com/ddr_create
+run command=waitress-serve --listen=0.0.0.0:8000 ddr_create.wsgi:application
